# supermileage-pi-server

./: .gitignore  2024-09-14_11-20-07_car_data.csv  2024-09-14_11-21-07_car_data.csv  2024-09-14_11-23-52_car_data.csv  2024-10-12_10-44-28_car_data - 5 rolling avg.csv  2024-10-12_11-00-22_car_data - 10 rolling avg.csv  2024-10-12_11-01-21_car_data - 7 rolling avg.csv  2024-10-29_20-52-11_car_data FIXED SENSOR.csv  2024-10-29_20-52-11_car_data FIXED SENSOR.xlsx  2025-02-22_16-45-32_car_data.csv  2025-02-27_20-12-26_car_data.csv  2025-02-27_20-23-46_car_data.csv  2025-02-27_20-32-48_car_data.csv  2025-02-27_20-40-06_car_data.csv  2025-02-27_20-44-08_car_data.csv  2025-02-27_20-50-11_car_data.csv  2025-02-27_20-59-04_car_data.csv  2025-02-27_21-01-26_car_data.csv  2025-02-27_21-09-59_car_data.csv  2025-02-27_22-18-52_car_data.csv  2025-03-15_09-44-27_car_data.csv  README.md  data_read.py  dbinit.py  main.py  pyproject.toml  reader.py  server.py  sm_serial.py  test.py
Data/: 2024-10-31_20-41-37_car_data.csv  2024-10-31_21-10-53_car_data.csv  2024-10-31_21-12-01_car_data.csv  2024-10-31_21-18-21_car_data.csv  2024-10-31_21-27-10_car_data.csv  2024-10-31_21-32-20_car_data.csv  2024-10-31_21-37-54_car_data.csv  2024-10-31_22-21-36_car_data.csv  2024-10-31_22-29-48_car_data.csv  2024-11-01_19-17-29_car_data.csv  2024-11-01_19-23-15_car_data.csv  2024-11-01_20-58-28_car_data.csv  2024-11-01_21-03-37_car_data.csv  2024-11-01_21-06-29_car_data.csv  2024-11-01_21-19-31_car_data.csv  2024-11-01_21-25-46_car_data.csv  2024-11-01_21-36-18_car_data.csv  2024-11-01_21-47-42_car_data.csv  (+44 more)
(+31 files in other folders)
